feat: standalone aas extension (#190)
* feat: Add remote edc control-plane accessors

* Chore: code cleanup

* feat: combine two pipeline steps into one

* feat: Use new pipeline step

* fix: Remote control-plane consistency

* feat: add standalone configuration file

* feat: pull in dependencies from :example

* feat: pull in dependencies to aas extension

* chore: cleanup code

* chore: add new extension to build

* chore: rename+slim down new extension

* feat: improve log messaging

* feat: add tests

* feat: restructure launchers

* chore: clean up doc

* chore: refactor

* test: add tests for codec, extension

* chore: extract common logic out of stores

* test: update test cases

* feat: code optimization

* fix: static policy IDs

* chore: cleanup build files

* feat: further optimizations to stores

* feat: observable store failures

* feat: dont warn for exists

* fix: NOT_FOUND return value

* feat: add vault auth

* chore(launchers): restructure

* chore(launchers): restructure pt2

* feat: add dp4standalone UC

* fix: serialization of AasDataAddress

* chore: refactoring, enum comparisons

* feat: make VaultAuth deserializable

* fix: new service auth field name

* feat: defensive control-plane error handling

* test: make tests more robust

* feat: extract error reporting

* chore: cleanup code

* fix: display objects in /catalog

* feat: update asset if existing

* feat: store reference natively in asset

* fix: store string reference in asset

* fix: keep NS of 'creator'

* feat: map policies for all elements

* fix: don't publish SMC/SML children

* feat: semanticId for all identifiable

* feat: compact json data before sending

* feat: clean up mappers

* feat: disable advertising of operation variables

* docs: add standalone feature to changelog

* docs: update readmes

* feat: add data-plane build file